// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailResult should not render a non existent component 1`] = `""`;

exports[`MapDetailResult should render adressen ligplaats 1`] = `
<MapDetailAdressenLigplaats
  ligplaats={
    Object {
      "endpointType": "bag/ligplaats/",
      "label": "value",
      "status": Object {
        "description": "description",
      },
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render adressen nummeraanduiding 1`] = `
<MapDetailAdressenVerblijfsobject
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  verblijfsobject={
    Object {
      "endpointType": "bag/nummeraanduiding/",
      "label": "value",
      "status": Object {
        "description": "description",
      },
    }
  }
/>
`;

exports[`MapDetailResult should render adressen openbareruimte 1`] = `
<MapDetailAdressenOpenbareRuimte
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  openbareRuimte={
    Object {
      "endpointType": "bag/openbareruimte/",
      "label": "value",
      "status": Object {
        "description": "description",
      },
    }
  }
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render adressen pand 1`] = `
<MapDetailAdressenPand
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  pand={
    Object {
      "endpointType": "bag/pand/",
      "label": "value",
      "status": Object {
        "description": "description",
      },
    }
  }
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render adressen standplaats 1`] = `
<MapDetailAdressenStandplaats
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  standplaats={
    Object {
      "endpointType": "bag/standplaats/",
      "label": "value",
      "status": Object {
        "description": "description",
      },
    }
  }
/>
`;

exports[`MapDetailResult should render adressen verblijfsobject 1`] = `
<MapDetailAdressenVerblijfsobject
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  verblijfsobject={
    Object {
      "endpointType": "bag/verblijfsobject/",
      "label": "value",
      "status": Object {
        "description": "description",
      },
    }
  }
/>
`;

exports[`MapDetailResult should render bedrijfsinvesteringszone 1`] = `
<MapDetailBedrijfsinvesteringszone
  bedrijfsinvesteringszone={
    Object {
      "endpointType": "vsd/biz/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render explosieven gevrijwaard gebied 1`] = `
<MapDetailExplosievenGevrijwaardGebied
  gevrijwaardGebied={
    Object {
      "endpointType": "milieuthemas/explosieven/gevrijwaardgebied/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render explosieven inslag 1`] = `
<MapDetailExplosievenInslag
  inslag={
    Object {
      "endpointType": "milieuthemas/explosieven/inslagen/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render explosieven uitgevoerd onderzoek 1`] = `
<MapDetailExplosievenUitgevoerdOnderzoek
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  uitgevoerdOnderzoek={
    Object {
      "endpointType": "milieuthemas/explosieven/uitgevoerdonderzoek/",
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render explosieven verdacht gebied 1`] = `
<MapDetailExplosievenVerdachtGebied
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  verdachtGebied={
    Object {
      "endpointType": "milieuthemas/explosieven/verdachtgebied/",
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render gebieden bouwblok 1`] = `
<MapDetailGebiedenBouwblok
  bouwblok={
    Object {
      "endpointType": "gebieden/bouwblok/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render gebieden buurt 1`] = `
<MapDetailGebiedenBuurt
  buurt={
    Object {
      "endpointType": "gebieden/buurt/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render gebieden gebiedsgericht-werken 1`] = `
<MapDetailGebiedenGebiedsgerichtWerken
  gebiedsgerichtWerken={
    Object {
      "endpointType": "gebieden/gebiedsgerichtwerken/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render gebieden grootstedelijk 1`] = `
<MapDetailGebiedenGrootstedelijk
  grootstedelijk={
    Object {
      "endpointType": "gebieden/grootstedelijkgebied/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render gebieden stadsdeel 1`] = `
<MapDetailGebiedenStadsdeel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  stadsdeel={
    Object {
      "endpointType": "gebieden/stadsdeel/",
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render gebieden unesco 1`] = `
<MapDetailGebiedenUnesco
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  unesco={
    Object {
      "endpointType": "gebieden/unesco/",
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render gebieden wijk 1`] = `
<MapDetailGebiedenWijk
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  wijk={
    Object {
      "endpointType": "gebieden/buurtcombinatie/",
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render grondexploitatie 1`] = `
<MapDetailGrondexploitatie
  detail={
    Object {
      "endpointType": "grondexploitatie/project/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render kadastraal object 1`] = `
<MapDetailKadastraalObject
  kadastraalObject={
    Object {
      "endpointType": "brk/object/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render meetbout 1`] = `
<MapDetailMeetbout
  meetbout={
    Object {
      "endpointType": "meetbouten/meetbout/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render monument 1`] = `
<MapDetailMonument
  monument={
    Object {
      "endpointType": "monumenten/monumenten/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render nap peilmerk 1`] = `
<MapDetailNapPeilmerk
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  peilmerk={
    Object {
      "endpointType": "nap/peilmerk/",
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render vestiging 1`] = `
<MapDetailVestiging
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  vestiging={
    Object {
      "endpointType": "handelsregister/vestiging/",
      "label": "value",
    }
  }
/>
`;
